# determinacy

./: .gitignore  CITATION.cff  README.md  discussion.md  method.md  pyproject.toml
determinacy/: __init__.py  adapter.py  agent.py  cli.py  config.py  coverage.py  materialize.py  plurality.py  receipts.py  refute.py  report.py  witness.py
examples/: swebench-pro.toml  swebench-rebench.toml  swebench-verified.toml
