[project]
name = "determinacy"
version = "0.1.0"
description = "Determinacy auditing for SWE-bench-shaped coding benchmarks"
requires-python = ">=3.11"
dependencies = ["datasets>=2.0"]

[project.scripts]
determinacy = "determinacy.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["determinacy"]
